--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="image/[fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
 
 
     <style>
